--- a/index.html
+++ b/index.html
@@ -1,1 +1,119 @@
-AHAHAHHAHHAH
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Fluff Takedown Panel</title>
+    <script type="module">
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-app.js";
+        import { getFirestore, doc, setDoc } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-firestore.js";
+
+        // Your shared, public Firebase Configuration
+        const firebaseConfig = { 
+            apiKey: "AIzaSyB_8Eao4PirrTF6DBjjbUmhL6MyXnt6vzY", 
+            authDomain: "steal-the-brainrot-admin-panel.firebaseapp.com", 
+            projectId: "steal-the-brainrot-admin-panel", 
+            storageBucket: "steal-the-brainrot-admin-panel.firebasestorage.app", 
+            messagingSenderId: "559691711111", 
+            appId: "1:559691711111:web:27dff3446aea0ef624ee22", 
+            measurementId: "G-3FPEYCR4JM" 
+        };
+
+        const app = initializeApp(firebaseConfig);
+        const db = getFirestore(app);
+        const prankDocRef = doc(db, "pranks", "status");
+
+        /**
+         * Sends a signal to Firestore.
+         * @param {string} state - The desired state ("prank" or "stop").
+         */
+        window.sendPrankSignal = function(state) {
+            const button = document.getElementById(state + '-button');
+            const otherButton = document.getElementById((state === 'prank' ? 'stop' : 'prank') + '-button');
+            
+            button.disabled = true;
+            otherButton.disabled = true;
+            button.textContent = `Sending ${state.toUpperCase()} Signal...`;
+
+            setDoc(prankDocRef, { state: state, timestamp: Date.now() })
+            .then(() => {
+                alert(`Signal ${state.toUpperCase()} Sent!`);
+                button.disabled = false;
+                otherButton.disabled = false;
+                button.textContent = state === 'prank' ? 'PRANK ACTIVATED' : 'STOP PRANK';
+                otherButton.textContent = state === 'prank' ? 'STOP PRANK' : 'PRANK';
+            })
+            .catch((error) => {
+                console.error("Error sending signal:", error);
+                alert("Error sending signal! Check Firebase Rules.");
+                button.disabled = false;
+                otherButton.disabled = false;
+                button.textContent = state === 'prank' ? 'PRANK' : 'Stop Prank';
+            });
+        }
+    </script>
+    <style>
+        body { 
+            display: flex; 
+            flex-direction: column;
+            justify-content: center; 
+            align-items: center; 
+            height: 100vh; 
+            background-color: #1f2937; 
+            margin: 0; 
+            font-family: 'Poppins', sans-serif;
+            color: white;
+            gap: 40px;
+        }
+        h1 { font-size: 2.5rem; font-weight: 700; }
+        .btn-panel {
+            display: flex;
+            gap: 20px;
+        }
+        .btn {
+            padding: 30px 40px; 
+            font-size: 24px; 
+            font-weight: bold; 
+            border: none; 
+            border-radius: 12px; 
+            cursor: pointer; 
+            transition: all 0.2s ease-in-out;
+            text-shadow: 0 0 10px rgba(0,0,0,0.5);
+            min-width: 250px;
+        }
+        .btn-prank {
+            background-color: #ef4444; /* Red */
+            color: white;
+            box-shadow: 0 0 15px rgba(239, 68, 68, 0.7);
+            animation: glow-red 2s infinite alternate;
+        }
+        .btn-prank:hover {
+            box-shadow: 0 0 25px rgba(239, 68, 68, 1);
+            transform: scale(1.05);
+        }
+        .btn-stop {
+            background-color: #22c55e; /* Green */
+            color: white;
+            box-shadow: 0 0 15px rgba(34, 197, 94, 0.7);
+        }
+        .btn-stop:hover {
+            box-shadow: 0 0 25px rgba(34, 197, 94, 1);
+            transform: scale(1.05);
+        }
+        @keyframes glow-red {
+            from { box-shadow: 0 0 15px rgba(239, 68, 68, 0.7); }
+            to { box-shadow: 0 0 25px rgba(239, 68, 68, 1), 0 0 35px rgba(239, 68, 68, 0.5); }
+        }
+    </style>
+</head>
+<body>
+    <h1>Fluff Takedown Panel (STB Admin)</h1>
+    <div class="btn-panel">
+        <button id="prank-button" class="btn btn-prank" onclick="sendPrankSignal('prank')">PRANK</button>
+        <button id="stop-button" class="btn btn-stop" onclick="sendPrankSignal('stop')">Stop Prank</button>
+    </div>
+</body>
+  <script>
+    
+  </script>
+</html>
